2006-01-13  Eric Butler  <eric@extremeboredom.net>

	* configure.ac: Generate makefile in doc directory, check for monodoc
	* Makefile.am: Compile doc directory
	* doc/en/*: Added initial english docs
	* doc/hal-sharp-docs.source: New file for docs
	* doc/Makefile.am: New filee dor docs

2006-01-13  Aaron Bockover  <aaron@aaronbock.net>

	* Makefile.am: Changed DISTCLEANFILES to MAINTAINERCLEANFILES

2006-01-13  Aaron Bockover  <aaron@aaronbock.net>

	* src/hal-sharp.dll.config.in: This was missing, how cute

2005-11-30  Aaron Bockover  <aaron@aaronbock.net>

	* src/HalDevice.cs: Use DBusError when adding/removing property watch
	* src/HalTest.cs: Stripped down test
	* src/Makefile.am: Added DBusError.cs
	* src/DBusError.cs: Bindings to DBusError (dbus_error_init, 
	dbus_error_free, dbus_error_is_set)
	* src/HalContext.cs: Use DBusError in places

2005-11-26  Aaron Bockover  <aaron@aaronbock.net>

	* src/HalContext.cs: New Parent property that returns an instantiated
	Hal.Device object based on the info.parent HAL property, which returns 
	a UDI of a device's parent; added Context property to return the Device's
	HAL Context

2005-11-18 Aaron Bockover  <aaron@aaronbock.net>
	
	* src/HalContext.cs:
	* src/HalDevice.cs: Replaced Marshal.PtrToStringAnsi with 
	UnixMarshal.PtrToString
	* src/HalContext.cs: Added a public Context(IntPtr) constructor to 
	enable using an already created/initialized native context
	* src/Makefile.am: renamed hal-sharp.exe test to hal-test.exe
	* configure.ac: Version 0.3, output src/hal-sharp.dll.config
	* src/Makefile.am: Added hal-sharp.dll.config.in
	* src/Makefile.am: Added rule to build HalTest.cs
	* src/HalContext.cs: Removed destructor, must use Dispose()
	* src/*.cs: Tabs->Spaces, reformatted code a little

2005-07-17 Aaron Bockover <aaron@aaronbock.net>

	* HalTest.cs: GTK test for events using main context
	* HalContext.cs: Changed some constructors around, now defaults to 