@@ -1,3 +1,8 @@
+2006-07-18  Aaron Bockover  <abock@gnome.org>
+
+	* src/HalDevice.cs: Added null checks for Hal.Context to prevent
+	crashing in places
+
 2006-01-13  Eric Butler  <eric@extremeboredom.net>
 
 	* configure.ac: Generate makefile in doc directory, check for monodoc
